--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=your_mongodb_connection_string
-JWT_SECRET=your_jwt_secret
+MONGO_URI=mongodb+srv://joabbas26:8tE7hMkd7VeceNS@cluster0.mongodb.net/Cluster0?retryWrites=true&w=majority
+JWT_SECRET=05f9d4c6-ad7f-4d2d-b96f-35a581fd7c41
+PORT=5000
