--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "svgo": "^3.3.2"
   }
 }
