--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.5",
+    "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.38",
     "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1"
   },
@@ -30,16 +32,16 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-class-properties": "^7.24.1",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
-    "@babel/plugin-transform-numeric-separator": "^7.24.1",
-    "@babel/plugin-transform-optional-chaining": "^7.24.5",
-    "@babel/plugin-transform-private-methods": "^7.24.1",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@rollup/plugin-terser": "^0.4.4",
     "concurrently": "^8.2.2",
-    "eslint": "^9.3.0",
+    "eslint": "^9.5.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-refresh": "^0.4.7",
     "svgo": "^3.3.2"
   }
