--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nth-check": "^2.1.1",
     "postcss": "^8.4.38",
     "react-icons": "^5.2.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "webpack-dev-server": "^5.0.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
